Fixed the overflowing of note content when the title or description is way too large. Basically removed the justify-content: space-evenly and added custom margins

--- a/inotebook/src/components/ViewModal.css
+++ b/inotebook/src/components/ViewModal.css
@@ -22,7 +22,6 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
 
     font-family: 'Poppins', sans-serif;
@@ -30,6 +29,15 @@
     border-radius: 0.5rem;
     transition: all 100ms linear;
     padding: 0.5rem;
+}
+
+.view-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+
 }
 
 #view-cross {
@@ -43,21 +51,24 @@
     cursor: pointer;
 }
 
-.view-container>h1 {
+.view-content>h1 {
     font-size: 2rem;
     text-align: center;
     max-width: 80%;
+    margin: 0.5rem;
 }
 
-.view-container>p {
+.view-content>p {
     font-size: 1.5rem;
     text-align: center;
     max-width: 80%;
+    margin: 0.5rem;
 }
 
-.view-container>span {
+.view-content>span {
     font-size: 1rem;
     text-align: center;
     max-width: 80%;
     opacity: 0.7;
+    margin: 0.5rem;
 }
